<resources>
    <string name="app_name">Coding Calculator</string>
    <string name="complementary">Complementary</string>
    <string name="split_complementary">Split Comp.</string>
    <string name="analogous">Analogous</string>
    <string name="triadic">Triadic</string>
    <string name="tetradic">Tetradic</string>
    <string name="saved">Saved</string>
    <string name="change_color">Change Color</string>
    <string name="saved_colors">Saved Colors</string>
    <string name="color_information">Color Information</string>
    <string name="color_palette">Color palette</string>
    <string name="color_range">Color Range</string>
    <string name="Text_infoRuleOfThree_direct">When we got to the hotel they gave us a map with the places of interest in the city, and they told us that 5 centimeters of the map represents 600 meters of reality. Today we want to go to a park that is 8 centimeters from the hotel on the map. How far from the hotel is this park? \n\nWe are going to make the table with the 3 data and the unknown (“x”), and we will find “x” with the formula that we have just learnt:</string>
    <string name="Text_infoRuleOfThree_inverse">Yesterday, 2 trucks transported goods from the port to the warehouse. Today, 3 trucks, the same size as yesterday, will have to make 6 trips to transport the same amount of goods from the warehouse to the mall. How many trips did the trucks make yesterday? \n\nWe are going to make the table with the 3 data and the unknown (“x”), and we will find “x” with the formula that we have just learnt:</string>
    <string name="converter">Converter</string>
    <string name="coding_calculator_title">Coding Calculator</string>
    <string name="description_calculator">It provides the fundamental operations and calculations.</string>
    <string name="description_converter">Simple universal units conversion tool.</string>
    <string name="description_numerical_systems">Converter of any long number between all numeric systems.</string>
    <string name="description_harmony">All-in-one tool for working with colors.</string>
    <string name="colors_harmonic">Color Harmony</string>
    <string name="numerical_systems">Numerical Systems</string>
    <string name="calculator">Calculator</string>
    <string name="description_extras">Other calculator features </string>
    <string name="tetradic_color_2">Tetradic color 2</string>
    <string name="tetradic_color_3">Tetradic color 3</string>
    <string name="tetradic_color_1">Tetradic color 1</string>
    <string name="triadic_color_2">Triadic color 2</string>
    <string name="triadic_color_1">Triadic color 1</string>
    <string name="analogous_color_5">Analogous color 5</string>
    <string name="analogous_color_4">Analogous color 4</string>
    <string name="analogous_color_3">Analogous color 3</string>
    <string name="analogous_color_2">Analogous color 2</string>
    <string name="analogous_color_1">Analogous color 1</string>
    <string name="splitCC_color_2">Split complementary  color 2</string>
    <string name="splitCC_color_1">Split complementary color 1</string>
    <string name="complementary_color_1">Complementary color 1</string>
    <string name="area_button">Area button</string>
    <string name="length_button">Length button</string>
    <string name="temperature_button">Temperature button</string>
    <string name="volume_button">Volume button</string>
    <string name="weight_button">Weight button</string>
    <string name="data_button">Data button</string>
    <string name="speed_button">Speed button</string>
    <string name="color_piker_button">Color piker button</string>
    <string name="palette_of_color">Palette of color</string>
    <string name="color_systems_information">Color systems information</string>
    <string name="complementary_color_information">Complementary color information</string>
    <string name="split_complementary_information">Split complementary information</string>
    <string name="analogous_color_information">Analogous color information</string>
    <string name="triadic_color_information">Triadic color information</string>
    <string name="tetradic_color_information">Tetradic color information</string>
    <string name="rgb_bar_color_red">RGB bar color red</string>
    <string name="rgb_bar_color_green">RGB bar color green</string>
    <string name="rgb_bar_color_blue">RGB bar color blue</string>
    <string name="value_a_converter">Value A Converter</string>
    <string name="value_b_converter">Value B Converter</string>
    <string name="increase_value">Increase value</string>
    <string name="value_color">value color</string>
    <string name="decrease_value">Decrease value</string>
    <string name="value_to_convert">Value to convert</string>
    <string name="value_of_percentage">Value of percentage</string>
    <string name="history_of_expression">History of expression</string>
    <string name="delete_character">Delete character</string>
    <string name="main_color_selected">Main color selected</string>
    <string name="insert_new_value">Insert new value</string>
    <string name="rule_of_three_information">Rule of three information</string>
    <string name="more_saved_color">More saved color</string>
    <string name="value_red_hex">value red HEX</string>
    <string name="value_green_hex">Value green HEX</string>
    <string name="value_blue_hex">Value blue HEX</string>
    <string name="value_hue_hsl">Value Hue HSL</string>
    <string name="value_lightness_hsl">Value Lightness HSL</string>
    <string name="value_saturation_hsl">Value saturation HSL</string>
    <string name="percentage_button">Percentage button</string>
    <string name="average_button">Average Button</string>
    <string name="rule_of_three_button">Rule of three button</string>
    <string name="rule_of_three">Rule of three</string>
    <string name="percentage">Percentage</string>
    <string name="average">Average</string>
    <string name="value_rgb_color_red">Value RGB color red</string>
    <string name="value_rgb_color_green">Value RGB color green</string>
    <string name="value_rgb_color_blue">Value RGB color blue</string>
    <string name="saved_color_1">saved color 1</string>
    <string name="saved_color_2">saved color 2</string>
    <string name="saved_color_3">saved color 3</string>
    <string name="value_red_color">Value red color</string>
    <string name="value_green_color">value green color</string>
    <string name="value_color_blue">value color blue</string>
    <string name="hex_color_code">Hex color code</string>
    <string name="result">Result: "\</string>
    <string name="History">History</string>
    <string name="speed">Speed</string>
    <string name="data">Data</string>
    <string name="weight">Weight</string>
    <string name="volume">Volume</string>
    <string name="temp">Temp.</string>
    <string name="time">Time</string>
    <string name="length">Length</string>
    <string name="area">Area</string>
    <string name="initialValue">0</string>
    <string name="color">COLOR:</string>
    <string name="openParenthesis">(</string>
    <string name="closeParenthesis">)</string>
    <string name="plus_less">+/-</string>
    <string name="allClean">AC</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="subtract">-</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="add">+</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="result_equal">=</string>
    <string name="percentage_calculator">%</string>
    <string name="number_0">0</string>
    <string name="point">.</string>
    <string name="icon_calculator">IconCalculator</string>
    <string name="icon_convert">Icon_convert</string>
    <string name="icon_numerical_systems">Icon_Numerical Systems</string>
    <string name="icon_color_harmonic">Icon_Color_harmonic</string>
    <string name="icon_extras">Icon_Extras</string>
    <string name="image_expression">Image_expression</string>
    <string name="image_expression2">Image_expression2</string>
    <string name="image_expression_example">Image_expression_example</string>
    <string name="palette_item">palette_item</string>
    <string name="r">R</string>
    <string name="_118">118</string>
    <string name="g">G</string>
    <string name="_0">0</string>
    <string name="b">B</string>
    <string name="_58">58</string>
    <string name="hex">HEX</string>
    <string name="_76003a">#76003A</string>
    <string name="hsl">HSL</string>
    <string name="_330">330</string>
    <string name="_100">100</string>
    <string name="_23">23</string>
    <string name="value_a">Value A</string>
    <string name="value_b">Value B</string>
    <string name="value_c">Value C</string>
    <string name="result2text">Result:</string>
    <string name="xs">X:</string>
    <string name="calculate">Calculator</string>
    <string name="extras">Extras</string>
    <string name="number">Number:</string>
    <string name="dec">Dec</string>
    <string name="bin">Bin</string>
    <string name="oct">Oct</string>
    <string name="hex1">Hex</string>
    <string name="result1">Result</string>
    <string name="binary">Binary:</string>
    <string name="octal">Octal:</string>
    <string name="decimal">Decimal:</string>
    <string name="hex2">Hex:</string>
    <string name="values">Values</string>
    <string name="pCent">Pcent %</string>
    <string name="value">Value</string>
    <string name="percentage_0">0%</string>
    <string name="result_without_point">Result</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="_42_164_138">(42,164,138)</string>
    <string name="rgb">RGB.</string>
    <string name="hexadecimal">Hexadecimal.</string>
    <string name="_4aa48a">#4AA48A</string>
    <string name="color_code">Color Code</string>
    <string name="rgb_color">RGB Color</string>
    <string name="hex_color">Hex. COLOR</string>
    <string name="name_color">Name Color</string>
    <string name="solution_1">Solution: The park is 960 meters from the hotel.</string>
    <string name="solution_2">Solution: Yesterday, 2 trucks made 9 trips.</string>
    <string name="direct">Direct</string>
    <string name="inverse">Inverse</string>
    <string name="proportions_type">Proportions type</string>
    <string name="update_massage">There is a new version available to install</string>
    <string name="Title_notification">New version "Update"</string>
    <string name="exponent_button">Exponent button</string>
    <string name="exponent">Exponent</string>
    <string name="base_x">Base (x)</string>
    <string name="exponent_n">Exponent (n)</string>
    <string name="clear">Clear</string>
    <string name="sigh_plus">+</string>
    <string name="n_values">Nº Values</string>
    <string name="mean">Mean</string>
    <string name="total">Total</string>
    <string name="base">Base:</string>
    <string name="exponent_dot">Exponent:</string>
    <string name="valueA">Value A</string>
    <string name="valueB">Value B</string>
    <string name="valueC">Value C</string>
    <string name="insert_number">Insert number</string>
    <string name="square_root">Nth root</string>
    <string name="square_root_button">Square root button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insertN">Insert n</string>
    <string name="insertX">Insert x</string>
    <string name="message_1">the index cannot be negative</string>
    <string name="message_2">Some of the data is missing to insert</string>
</resources>