<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="340dp"
    tools:context=".MainActivity"
    android:background="@color/Front_ColorGrey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainLayoutPalette">

            <LinearLayout
                android:id="@+id/field_color"
                android:layout_width="110dp"
                android:layout_height="0dp"
                android:background="#76003a"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="#424242"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                android:elevation="20dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/color_information"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/RGBColor"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                app:layout_constraintLeft_toRightOf="@id/field_color"
                app:layout_constraintTop_toBottomOf="@id/layoutTitle">
                <!--    android:background="#FFDD00">-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:textSize="17sp"
                        android:text="@string/r"
                        android:textStyle="bold"
                        android:textColor="@color/color_text_contrast"
                        android:background="#fd4046"
                        android:textAlignment="center">

                    </TextView>

                    <TextView
                        android:id="@+id/rgb_red_part"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/value_red_color"
                        android:text="@string/_118"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:textAlignment="viewEnd">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:textSize="17sp"
                        android:text="@string/g"
                        android:textStyle="bold"
                        android:textColor="@color/color_text_contrast"
                        android:background="#1ffe17"
                        android:textAlignment="center">

                    </TextView>

                    <TextView
                        android:id="@+id/rgb_green_part"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/value_green_color"
                        android:text="@string/_0"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:textAlignment="viewEnd">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:textSize="17sp"
                        android:text="@string/b"
                        android:textStyle="bold"
                        android:textColor="@color/color_text_contrast"
                        android:background="#04bbff"
                        android:textAlignment="center">

                    </TextView>

                    <TextView
                        android:id="@+id/rgb_blue_part"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/value_color_blue"
                        android:text="@string/_58"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:textAlignment="viewEnd">

                    </TextView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="#424242"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/mainLayoutPalette"
                app:layout_constraintLeft_toRightOf="@id/field_color"
                app:layout_constraintRight_toRightOf="@id/mainLayoutPalette"
                app:layout_constraintTop_toBottomOf="@+id/HSL_part"
                android:layout_marginTop="25dp"
                tools:ignore="MissingConstraints,UnknownId"
                android:elevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hex"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/hex_part"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/hex_color_code"
                        android:layout_marginStart="15dp"
                        android:text="@string/_76003a"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        android:textStyle="bold">

                    </TextView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/HSL_part"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@id/RGBColor"
                app:layout_constraintTop_toBottomOf="@id/layoutTitle"
                app:layout_constraintRight_toRightOf="@id/mainLayoutPalette"
                android:layout_marginEnd="80dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hsl"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/hsl_partH"
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:background="#424242"
                        android:text="@string/_330"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/hsl_partS"
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="#424242"
                        android:text="@string/_100"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/hsl_partL"
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="#424242"
                        android:text="@string/_23"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>