<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#484848">

    <TextView
        android:id="@+id/Titlefield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="25dp"
        android:text="@string/change_color"
        android:textColor="#FFF"
        android:background="#414141"
        android:gravity="center|center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:elevation="20dp">

    </TextView>

    <ImageButton
        android:id="@+id/increase"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:contentDescription="@string/increase_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Titlefield"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_arrow_up"
        android:scaleType="centerInside"
        android:backgroundTint="#414141">

    </ImageButton>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/increase"
        app:boxCornerRadiusBottomStart="20dp"
        app:helperTextTextColor="#AEAEAE"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextReal"
            android:contentDescription="@string/value_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="#FFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/decrease"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:contentDescription="@string/decrease_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_arrow_down"
        android:scaleType="centerInside"
        android:backgroundTint="#414141">

    </ImageButton>

</androidx.constraintlayout.widget.ConstraintLayout>